@@ -24,6 +24,7 @@ Misc:
  - Debugger: Add breakpoint and watchpoint listing
  - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
  - LR35902: Support PC-relative opcode decoding
+ - Qt: Improve camera initialization
 
 0.7.1: (2019-02-24)
 Bugfixes:
